// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SinglePostArticle - Snapshots > matches snapshot when blurred 1`] = `
<div
  class="mb-6 grid grid-cols-1 gap-6 lg:grid-cols-3"
  data-testid="container"
>
  <div
    class="lg:col-span-2"
    data-testid="container"
  >
    <h1
      class="mb-6 wrap-anywhere hyphens-auto"
      data-size="2xl"
      data-testid="typography"
    >
      Blurred Article
    </h1>
    <div
      data-post-id="snapshot-user:blurred-post"
      data-size="large"
      data-testid="post-header"
      data-time-placement="bottom-left"
    >
      PostHeader
    </div>
    <div
      class="mt-3 mb-6"
      data-post-id="snapshot-user:blurred-post"
      data-testid="post-actions-bar"
    >
      <button
        data-testid="reply-button"
      >
        Reply
      </button>
      <button
        data-testid="repost-button"
      >
        Repost
      </button>
    </div>
    <div
      data-post-id="snapshot-user:blurred-post"
      data-testid="post-content-blurred"
    >
      Blurred Content
    </div>
    <div
      class="mt-6 flex lg:hidden"
      data-post-id="snapshot-user:blurred-post"
      data-testid="post-tags-panel"
    >
      Tags Panel
    </div>
  </div>
  <div
    class="hidden lg:flex"
    data-post-id="snapshot-user:blurred-post"
    data-testid="post-tags-panel"
  >
    Tags Panel
  </div>
</div>
`;

exports[`SinglePostArticle - Snapshots > matches snapshot with cover image 1`] = `
<div
  class="mb-6 grid grid-cols-1 gap-6 lg:grid-cols-3"
  data-testid="container"
>
  <div
    class="lg:col-span-2"
    data-testid="container"
  >
    <h1
      class="mb-6 wrap-anywhere hyphens-auto"
      data-size="2xl"
      data-testid="typography"
    >
      Article With Cover
    </h1>
    <div
      data-post-id="snapshot-user:cover-post"
      data-size="large"
      data-testid="post-header"
      data-time-placement="bottom-left"
    >
      PostHeader
    </div>
    <div
      class="mt-3 mb-6"
      data-post-id="snapshot-user:cover-post"
      data-testid="post-actions-bar"
    >
      <button
        data-testid="reply-button"
      >
        Reply
      </button>
      <button
        data-testid="repost-button"
      >
        Repost
      </button>
    </div>
    <img
      alt="Article cover"
      class="mb-6 w-full rounded-md"
      data-testid="cover-image"
      src="https://example.com/cover.jpg"
    />
    <div
      data-has-link-click="true"
      data-is-article="true"
      data-testid="post-text"
    >
      Article body with cover image
    </div>
    <div
      class="mt-6 flex lg:hidden"
      data-post-id="snapshot-user:cover-post"
      data-testid="post-tags-panel"
    >
      Tags Panel
    </div>
  </div>
  <div
    class="hidden lg:flex"
    data-post-id="snapshot-user:cover-post"
    data-testid="post-tags-panel"
  >
    Tags Panel
  </div>
</div>
`;

exports[`SinglePostArticle - Snapshots > matches snapshot with default props (no cover image, not blurred) 1`] = `
<div
  class="mb-6 grid grid-cols-1 gap-6 lg:grid-cols-3"
  data-testid="container"
>
  <div
    class="lg:col-span-2"
    data-testid="container"
  >
    <h1
      class="mb-6 wrap-anywhere hyphens-auto"
      data-size="2xl"
      data-testid="typography"
    >
      Snapshot Article Title
    </h1>
    <div
      data-post-id="snapshot-user:snapshot-post"
      data-size="large"
      data-testid="post-header"
      data-time-placement="bottom-left"
    >
      PostHeader
    </div>
    <div
      class="mt-3 mb-6"
      data-post-id="snapshot-user:snapshot-post"
      data-testid="post-actions-bar"
    >
      <button
        data-testid="reply-button"
      >
        Reply
      </button>
      <button
        data-testid="repost-button"
      >
        Repost
      </button>
    </div>
    <div
      data-has-link-click="true"
      data-is-article="true"
      data-testid="post-text"
    >
      Snapshot article body content
    </div>
    <div
      class="mt-6 flex lg:hidden"
      data-post-id="snapshot-user:snapshot-post"
      data-testid="post-tags-panel"
    >
      Tags Panel
    </div>
  </div>
  <div
    class="hidden lg:flex"
    data-post-id="snapshot-user:snapshot-post"
    data-testid="post-tags-panel"
  >
    Tags Panel
  </div>
</div>
`;
